--- a/public/pages/analyze.html
+++ b/public/pages/analyze.html
@@ -10,7 +10,7 @@
     <md-button ng-if="updatePeriodically" ng-click="stopUpdating()" md-theme="octo-blue" aria-label="Reset Token">
       <md-tooltip>Live Update</md-tooltip>
       <i class="fa fa-refresh fa-spin"></i>
-      Live Update 
+      Live Update
     </md-button>
 
     <md-button ng-if="!updatePeriodically" ng-click="startUpdating()" md-theme="octo-blue" aria-label="Reset Token">
@@ -21,37 +21,40 @@
   </h2>
 </md-toolbar>
 <div flex layout-fill layout="row" layout-align="center">
-    <md-content flex layout-fill>
-        <div flex layout-lg="column" layout-gt-lg="row" layout-align="space-around">
-          <div class="analyze-card md-whiteframe-z1" flex>
-              <md-toolbar>
-                  <h2 class="md-toolbar-tools">Topics</h2>
-              </md-toolbar>
-              <canvas class="chart chart-pie" data="topicData.data" labels="topicData.labels" legend="true"></canvas>
-          </div>
-          <div class="analyze-card md-whiteframe-z1" flex>
-              <md-toolbar>
-                  <h2 class="md-toolbar-tools">Messages/Time</h2>
-              </md-toolbar>
-              <canvas class="chart chart-bar", series="messageData.series" data="messageData.data" labels="messageData.labels" legend="true"></canvas>
-          </div>
-        </div>
-        <div class="analyze-card md-whiteframe-z1" flex>
-          <md-toolbar>
-            <h2 class="md-toolbar-tools">Search</h2>
-          </md-toolbar>
+  <md-content flex layout-fill>
+    <div flex layout-lg="column" layout-gt-lg="row" layout-align="space-around" style="flex-wrap:wrap;">
+
+      <div flex class="analyze-card md-whiteframe-z1">
+        <md-toolbar>
+            <h2 class="md-toolbar-tools">Topics</h2>
+        </md-toolbar>
+        <canvas class="chart chart-pie" data="topicData.data" labels="topicData.labels" legend="true"></canvas>
+      </div>
+
+      <div flex class="analyze-card md-whiteframe-z1">
+        <md-toolbar>
+            <h2 class="md-toolbar-tools">Messages/Time</h2>
+        </md-toolbar>
+        <canvas class="chart chart-bar", series="messageData.series" data="messageData.data" labels="messageData.labels" legend="true"></canvas>
+      </div>
+
+      <div flex class="analyze-card md-whiteframe-z1" layout-align="center" layout="column">
+        <md-toolbar>
+          <h2 class="md-toolbar-tools">Search</h2>
+        </md-toolbar>
           <form class="form" layout="row" layout-align="center">
-              <div class="form-group" flex="90" style="margin: 20px 0px">
-                  <div class="input-group">
-                      <input type="text" class="form-control" ng-model="analyzeSearch" placeholder="Filter" autofocus>
-                      <span class="input-group-addon">
-                          <i class="fa fa-search"></i>
-                      </span>
-                  </div>
-              </div>
+            <div class="form-group" flex="80" style="margin: 20px 0px">
+                <div class="input-group">
+                  <input type="text" class="form-control" ng-model="analyzeSearch" placeholder="Filter" autofocus>
+                  <span class="input-group-addon">
+                      <i class="fa fa-search"></i>
+                  </span>
+                </div>
+            </div>
           </form>
-        </div>
-        <div ng-repeat="message in messages" ng-include="'/pages/general-search-item.html'">
-        </div>
-    </md-content>
+          <div ng-repeat="message in messages" ng-include="'/pages/general-search-item.html'"></div>
+      </div>
+
+    </div>
+  </md-content>
 </div>
