--- a/public/pages/general-search-item.html
+++ b/public/pages/general-search-item.html
@@ -1,16 +1,17 @@
-<div class="analyze-card md-whiteframe-z1">
+<md-card>
   <div class="subject-line" flex layout="row" layout-align="space-between">
-    <div flex>
+    <div flex layout="row">
       <strong>To: {{message.devices}}</strong>
     </div>
-      <h3 flex>
+      <h3 flex layout="row" layout-align="center">
         {{message.topic}}
       </h3>
-    <div flex layout-align="flex-end">
+    <div flex layout="row" layout-align="end">
       <strong>From: {{message.fromUuid}}</strong>
     </div>
   </div>
-  <pre>
-    {{message.payload | json}}
-  </pre>
-</div>
+  <pre>{{message.payload | json}}</pre>
+  <div flex layout="row" layout-align="end">
+    {{message.timestamp}}
+  </div>
+</md-card>
