added timestamp format

--- a/public/pages/general-search-item.html
+++ b/public/pages/general-search-item.html
@@ -12,6 +12,6 @@
   </div>
   <pre>{{message.payload | json}}</pre>
   <div flex layout="row" layout-align="end">
-    {{message.timestamp}}
+    {{message.timestamp | date:'medium'}}
   </div>
 </md-card>
