--- a/public/pages/analyze.html
+++ b/public/pages/analyze.html
@@ -44,7 +44,7 @@
         <div flex ng-show="!loadingMessageData && messageData.data.length === 0" layout="row" layout-sm="column" layout-align="center center">
           <h3>No Data Yet. Send some messages.</h3>
         </div>
-        <canvas ng-hide="loadingMessageData" class="chart chart-bar", series="messageData.series" data="messageData.data" labels="messageData.labels" legend="true"></canvas>
+        <canvas ng-hide="loadingMessageData" class="chart chart-bar", series="messageData.series" data="messageData.data" labels="messageData.labels" click="onClickBar" legend="true"></canvas>
         <div flex ng-show="loadingMessageData" layout="row" layout-sm="column" layout-align="center center">
           <md-progress-circular md-mode="indeterminate" aria-valuemin="0" aria-valuemax="100" role="progressbar" class="md-hue-2 md-default-theme"></md-progress-circular>
         </div>
