fixed prism directive. added animation to general search, and probably some other stuff I don't remember

--- a/public/pages/analyze.html
+++ b/public/pages/analyze.html
@@ -64,7 +64,7 @@
                 </div>
             </div>
           </form>
-          <div ng-repeat="message in searchResults" ng-include="'/pages/general-search-item.html'"></div>
+          <div class="message" ng-repeat="message in searchResults" ng-include="'/pages/general-search-item.html'"></div>
       </div>
 
     </div>
