--- a/public/pages/prism.html
+++ b/public/pages/prism.html
@@ -1,1 +1,1 @@
-<pre><code class="language-javascript">{{debug | json}}</code></pre>
+<pre><code class="language-javascript">{{code | json}}</code></pre>
