--- a/public/pages/analyze.html
+++ b/public/pages/analyze.html
@@ -57,7 +57,7 @@
           <form class="form" layout="row" layout-align="center">
             <div class="form-group" flex="80" style="margin: 20px 0px">
                 <div class="input-group">
-                  <input type="text" class="form-control" ng-model="analyzeSearch" placeholder="Filter" autofocus>
+                  <input type="text" class="form-control" ng-model="analyzeSearch" placeholder="Filter" autofocus ng-model-options="{ debounce: 500 }">
                   <span class="input-group-addon">
                       <i class="fa fa-search"></i>
                   </span>
