--- a/public/pages/admin/index.html
+++ b/public/pages/admin/index.html
@@ -22,7 +22,7 @@
     }
 </style>
 
-<md-content>
+<md-content flex layout-fill>
     <div class="col-xs-12">
         <div class="col-xs-12 text-right">
             <form class="form-inline" role="form" ng-submit="send()">
