--- a/public/pages/node_forms/schedule_form.html
+++ b/public/pages/node_forms/schedule_form.html
@@ -4,7 +4,7 @@
 </div>
 
 <div class="form-group">
-  <label for="crontab">Schedule (crontab)</label>
+  <label for="crontab">Schedule (crontab. Flows run in the UTC timezone)</label>
   <input  id="crontab" class="form-control" type="text" ng-model="flowNode.crontab" required>
 </div>
 
