--- a/public/pages/node_forms/channel_form.html
+++ b/public/pages/node_forms/channel_form.html
@@ -1,3 +1,4 @@
 <md-text-float label="Name" ng-model="flowNode.name"> </md-text-float>
+<md-switch ng-true-value="false" ng-false-value="true" ng-model="flowNode.useStaticMessage">Forward Message</md-switch>
 
 <endpoint-selector ng-model="flowNode"></endpoint-selector>
