remove octo-blue

--- a/public/pages/connector/devices/detail/index.html
+++ b/public/pages/connector/devices/detail/index.html
@@ -1,4 +1,4 @@
-<md-toolbar md-theme="octo-blue">
+<md-toolbar>
   <h2 class="md-toolbar-tools page-heading" layout="row" layout-align="space-between">
     <div flex layout="row">
       <a href class="menu-icon" ng-click="toggleNav()">
@@ -7,13 +7,13 @@
       </a>
     </div>
 
-    <md-button ng-click="resetToken(device)" md-theme="octo-blue" aria-label="Reset Token">
+    <md-button ng-click="resetToken(device)" aria-label="Reset Token">
       <md-tooltip>Reset Token</md-tooltip>
       <i class="fa fa-key"></i>
       Reset Token
     </md-button>
 
-    <md-button ng-click="deleteDevice(device)" md-theme="octo-blue" aria-label="Delete Device">
+    <md-button ng-click="deleteDevice(device)" aria-label="Delete Device">
       <md-tooltip>Delete Device</md-tooltip>
       <i class="fa fa-trash"></i>
       Delete
