--- a/public/pages/flow.html
+++ b/public/pages/flow.html
@@ -3,7 +3,7 @@
     <img src="/assets/images/octoblu.png" height="50px"/>
   </div>
 
-  <md-toolbar md-theme="octo-blue" class="flow-top-bar" layout="row" layout-phone="column" layout-tablet="column">
+  <md-toolbar class="flow-top-bar" layout="row" layout-phone="column" layout-tablet="column">
     <div flex layout="row" class="md-toolbar-tools">
       <h2 class="page-heading">
         <a href class="menu-icon" ng-click="toggleNav()">
