--- a/public/pages/process.html
+++ b/public/pages/process.html
@@ -1,4 +1,4 @@
-<md-toolbar md-theme="octo-blue">
+<md-toolbar>
   <h2 class="md-toolbar-tools page-heading" layout="row" layout-align="space-between">
     <div flex layout="row">
       <a href class="menu-icon" ng-click="toggleNav()">
@@ -27,7 +27,7 @@
           </form>
       </div>
 
-      <md-toolbar md-theme="octo-blue"  layout="row" flex>
+      <md-toolbar layout="row" flex>
          <div class="process-row-logo"></div>
          <div flex layout="row">
            <md-button flex="35" ng-click="setSortProcess('name')" aria-label="Sort by Name">Name</md-button>
