--- a/public/pages/analyze.html
+++ b/public/pages/analyze.html
@@ -1,5 +1,5 @@
 <div class="analyze" layout-fill layout="column" flex>
-  <md-toolbar md-theme="octo-blue">
+  <md-toolbar>
     <h2 class="md-toolbar-tools page-heading" layout="row" layout-align="space-between">
       <div flex layout="row">
         <a href class="menu-icon" ng-click="toggleNav()">
@@ -8,13 +8,13 @@
         </a>
       </div>
 
-      <md-button ng-if="updatePeriodically" ng-click="stopUpdating()" md-theme="octo-blue" aria-label="Reset Token">
+      <md-button ng-if="updatePeriodically" ng-click="stopUpdating()" aria-label="Reset Token">
         <md-tooltip>Live Update</md-tooltip>
         <i class="fa fa-refresh fa-spin"></i>
         Live Update
       </md-button>
 
-      <md-button ng-if="!updatePeriodically" ng-click="startUpdating()" md-theme="octo-blue" aria-label="Reset Token">
+      <md-button ng-if="!updatePeriodically" ng-click="startUpdating()" aria-label="Reset Token">
         <md-tooltip>Paused</md-tooltip>
         <i class="fa fa-pause"></i>
         Paused
