--- a/public/pages/connector/nodes/index.html
+++ b/public/pages/connector/nodes/index.html
@@ -1,4 +1,4 @@
-<md-toolbar md-theme="octo-blue">
+<md-toolbar>
   <h2 class="md-toolbar-tools page-heading" layout="row" layout-align="space-between">
     <div flex layout="row">
       <a href class="menu-icon" ng-click="toggleNav()">
@@ -7,7 +7,7 @@
       </a>
     </div>
 
-    <md-button ui-sref="material.nodewizard.addnode" md-theme="octo-blue" aria-label="Add New Node">
+    <md-button ui-sref="material.nodewizard.addnode" aria-label="Add New Node">
       <md-tooltip>Add New Node</md-tooltip>
       <i class="fa fa-plus"></i>
       Add Node
