--- a/public/pages/profile.html
+++ b/public/pages/profile.html
@@ -1,4 +1,4 @@
-<md-toolbar md-theme="octo-blue">
+<md-toolbar>
   <h2 class="md-toolbar-tools page-heading" layout="row" layout-align="space-between">
       <div flex layout="row">
           <a href class="menu-icon" ng-click="toggleNav()">
@@ -7,13 +7,13 @@
           </a>
       </div>
 
-      <md-button ng-click="changePassword()" md-theme="octo-blue" aria-label="Change Password">
+      <md-button ng-click="changePassword()" aria-label="Change Password">
         <md-tooltip>Change Password</md-tooltip>
           <i class="fa fa-lock"></i>
           Change Password
       </md-button>
 
-      <md-button ng-click="resetToken()" md-theme="octo-blue" aria-label="Reset Token">
+      <md-button ng-click="resetToken()" aria-label="Reset Token">
         <md-tooltip>Reset Token</md-tooltip>
           <i class="fa fa-key"></i>
           Reset Token
